# PEPEJUMPP

pepe-jump/: Anchor.toml  BABY-STEPS.md  Dockerfile.bot  README.md  deploy.sh  docker-compose.yml  package.json  setup.sh  tsconfig.json
pepe-jump/app/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
pepe-jump/app/src/: App.jsx  PepeJump.jsx  main.jsx  pepe-client.ts  useGameContract.js
pepe-jump/docs/: DEPLOYMENT.md
pepe-jump/programs/pepe_jump/: Cargo.toml
pepe-jump/programs/pepe_jump/src/: lib.rs
pepe-jump/scripts/: daily-prizes.ts  initialize.ts  telegram-bot.ts
pepe-jump/tests/: pepe_jump.ts
