[package]
name = "pepe-jump"
version = "0.1.0"
description = "PEPE JUMP — Crypto Meme Game on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pepe_jump"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
